# Macro-Regime-Identifier

./: .env.example  .gitignore  AGENTS.md  Macro Trend Identifier v_0.md  README.md  index.html  pyproject.toml  v0.1 Config Draft.md  v0.1 VS Code Implementation Prompt.md
assets/: index-88AmSMHE.js  index-BRWOf4Gg.css  index-BRwXx3GD.js  index-BT9eln_1.js  index-B_rZzZL0.css  index-BhataZn4.js  index-BlM8r3Lk.css  index-BoAchG0d.js  index-CA8r3x22.js  index-CYGie9no.css  index-CcGCkCzN.css  index-CkA4rBui.css  index-CoE2D5jd.js  index-D9M6Hv5_.js  index-DHkb-7Hh.css  index-DO6q_liF.js  index-DQINvSrP.css  index-DXCVAUqh.css  index-DZrft8Mk.js  index-D_ArdpLn.js  index-DrQR9Um1.js  index-DuaaEQ4Q.css  index-XRS-axbR.js  index-lHl8RdVE.js  index-zqmueMv-.js
config/: daily_pipeline.yaml  daily_pipeline_github.yaml  daily_pipeline_github_live.yaml  daily_pipeline_replay_news_only.yaml  dimensions.yaml  gdelt_backfill.yaml  model.yaml  nber_recessions.yaml  news_accumulation.yaml  news_ai.yaml  news_ai_live.yaml  news_monitoring.yaml  news_scoring.yaml  news_selection.yaml  news_source_watchlist.yaml  news_sources.yaml  news_themes.yaml  phase_b_sources.yaml  regimes.yaml  sector_exposure_guardrails.yaml  sector_exposures.yaml  sector_news_integration.yaml  sector_regime_priors.yaml  sector_validation.yaml  sectors.yaml  sources.yaml
dashboard/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
data/: automation_run_summary.json  combined_sector_diagnostic.json  current_sector_ranking.json  daily_diagnostic_summary.json  history_index.json  (+12 more)
(+310 files in other folders)
